--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,10 @@
+###
+ # @Author: chenyx
+ # @Date: 2023-03-01 13:44:35
+ # @LastEditors: Do not edit
+ # @LastEditTime: 2023-03-23 10:48:14
+ # @FilePath: /backstage-manage/.env.development
+### 
 ## 开发环境
 
 # 变量必须以 VITE_ 为前缀才能暴露给外部读取
